Alteração de vídeos

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
 
     <section class="chamada">
         <div class="chamada-texto">
-            <h1>Como é FABRICADO o CLORO?</h1>
+            <h1>COMO é fabricado um CARRO</h1>
             <p>#boravê</p>
         </div>
 
 
         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/yrzpOqprUpM?si=yqfSTZQ_k5CilQEv"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/iqNPL_5MayI?si=Hsr_7spj0rnRy7vK" 
+            title="YouTube video player" frameborder="0" allow="accelerometer; 
+            autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
 
@@ -47,6 +47,9 @@
             </a>
             <a href="https://www.youtube.com/watch?v=S-j1mCMucA8">
                 <img src="https://img.youtube.com/vi/S-j1mCMucA8/maxresdefault.jpg" />
+            </a>
+            <a href="https://www.youtube.com/watch?v=vSeDojl-rYQ">
+                <img src="https://img.youtube.com/vi/vSeDojl-rYQ/maxresdefault.jpg" />
             </a>
         </div>
     </section>
