--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="pt-br">
 
 <head>
-    <title>WagnerbizzaFLIX</title>
+    <title>NetoFlix</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +13,7 @@
 
 <body>
 
-    <header>WAGNERBIZZAFLIX</header>
+    <header>NetoFlix</header>
 
     <section class="chamada">
         <div class="chamada-texto">
@@ -23,10 +23,10 @@
 
 
         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/iqNPL_5MayI?si=Hsr_7spj0rnRy7vK" 
-            title="YouTube video player" frameborder="0" allow="accelerometer; 
-            autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/iqNPL_5MayI?si=Hsr_7spj0rnRy7vK"
+                title="YouTube video player" frameborder="0" allow="accelerometer; 
+            autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
 
