--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="pt-br">
 
 <head>
-    <title>NetoFlix</title>
+    <title>WagnerbizzaFLIX</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +13,7 @@
 
 <body>
 
-    <header>NetoFlix</header>
+    <header>WAGNERBIZZAFLIX</header>
 
     <section class="chamada">
         <div class="chamada-texto">
